tests/negative/typecheck/args-named-few-named.orng
fn main() -> Int {
    f(.y = 5)
}

fn f(x: Int, y: Int) -> Int { x + y }